# companion-module-studiocoast-vmix

./: README.md  package.json  tsconfig.json
rust/vmix_xml/: Cargo.toml
rust/vmix_xml/src/: lib.rs
src/: config.ts  data.ts  index.ts
src/bench/: bench-sample.xml  benchmark-before-after.ts  benchmark-full.ts  benchmark.ts
src/xml/: adapter.ts  fxpAdapter.ts  rustWasmAdapter.ts  xml2jsAdapter.ts
