[package]
name = "vmix_xml"
description = "vMix XML Parser for companion"
version = "4.2.0-rc1"
edition = "2021"
license = "MIT"
repository = "https://github.com/bitfocus/companion-module-studiocoast-vmix"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true

